@@ -1,7 +1,7 @@
 import java.io.*;
+import java.net.InetAddress;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map.Entry;
 
@@ -16,90 +16,87 @@ public class SLAVE {
 
     private static final String MACHINES_FILE = HOME_DIRECTORY + "/machines.txt";
 
-    private static final HashMap<Integer, String> machines = new HashMap<>();
-
     private static final String MASTER_ADDRESS = "tp-3a101-00.enst.fr";
+
     private static final int PORT = 8888;
-    private static Socket master;
+    private final HashMap<Integer, String> machines = new HashMap<>();
+    private int machineId;
 
-    private static final ArrayList<Socket> clients = new ArrayList<>();
-
-    public SLAVE(int mode, String inputFile) {
-        if (mode == 0) {
-            launchMap(inputFile);
-        } else if (mode == 1) {
-            launchShuffle(inputFile);
-            processShuffleOutput();
-        } else {
-            System.err.println("Invalid mode.");
-            System.err.println("Usage: java -jar SLAVE.jar <mode> <inputFile>");
-            System.exit(1);
-        }
-    }
-
-    public SLAVE(int mode) {
-        if (mode == 2) {
-            launchReduce();
-        } else if (mode == 10) {
-            System.out.println("Connecting to master : " + MASTER_ADDRESS + " on port " + PORT);
-            try {
-                master = new Socket(MASTER_ADDRESS, PORT);
-                BufferedReader readerMaster = new BufferedReader(new InputStreamReader(master.getInputStream()));
-                BufferedWriter writerMaster = new BufferedWriter(new OutputStreamWriter(master.getOutputStream()));
-
-                System.out.println("Connected to " + MASTER_ADDRESS + " on port " + PORT);
-
-                String line;
-                while (true) {
-                    line = readerMaster.readLine();
-                    System.out.println("Received: " + line);
-                    if (line.equals("QUIT")) {
-                        break;
-                    }
-                    // Execute line
-                    Process process = Runtime.getRuntime().exec(line);
-                    int code = process.waitFor();
-                    System.out.println("Code: " + code);
-                    // Send back done.
-                    writerMaster.write(code + "\n");
-                    writerMaster.flush();
-                }
-                readerMaster.close();
-                writerMaster.close();
-                master.close();
-            } catch (IOException | InterruptedException e) {
-                e.printStackTrace();
-            }
-        } else {
-            System.err.println("Invalid mode.");
-            System.err.println("Usage: java -jar SLAVE.jar <mode>");
-            System.exit(1);
-        }
-    }
+    private BufferedReader readerMaster;
+    private BufferedWriter writerMaster;
 
     public static void main(String[] args) throws NumberFormatException, InterruptedException {
-        if (args.length > 3) {
-            System.err.println("Usage: java -jar SLAVE.jar <mode> <inputFile || serverAddress> <port>");
-            return;
-        }
+        new SLAVE();
+    }
 
-        int mode = Integer.parseInt(args[0]);
-
-        System.out.println("Mode: " + mode);
+    public SLAVE() {
 
         File machinesFile = new File(MACHINES_FILE);
         getMachines(machinesFile);
 
-        if (args.length == 1) {
-            new SLAVE(mode);
-        } else if (args.length == 2) {
-            new SLAVE(mode, args[1]);
-        } else {
-            new SLAVE(mode, args[1], Integer.parseInt(args[2]));
+        try {
+            ServerSocket serverSocket = new ServerSocket(PORT);
+            System.out.println("Waiting for master...");
+            Socket masterSocket = serverSocket.accept();
+
+            readerMaster = new BufferedReader(new InputStreamReader(masterSocket.getInputStream()));
+            writerMaster = new BufferedWriter(new OutputStreamWriter(masterSocket.getOutputStream()));
+
+            System.out.println("Connected to master on port " + PORT);
+
+            String line;
+            while (true) {
+                line = readerMaster.readLine();
+                if (line == null) {
+                    continue;
+                }
+                System.out.println("Received: " + line);
+                if (line.equals("QUIT")) {
+                    break;
+                } else if (line.startsWith("launchMap")) {
+                    String inputFile = line.split(" ")[1];
+                    launchMap(inputFile);
+                    sayDone();
+                } else if (line.startsWith("launchShuffle")) {
+                    String inputFile = line.split(" ")[1];
+                    launchShuffle(inputFile);
+                    processShuffleOutput();
+                    sayDone();
+                } else if (line.startsWith("Shuffle: ")) {
+                  String shuffleReceived = line.split(" ")[1];
+                  processShuffleReceived(shuffleReceived);
+                } else if (line.equals("launchReduce")) {
+                    launchReduce();
+                    sayDone();
+                } else if (line.startsWith("runCommand")) {
+                    String command = line.split(" ")[1];
+
+                    // Execute line
+                    Process process = Runtime.getRuntime().exec(command);
+                    int code = process.waitFor();
+                    System.out.println("Code: " + code);
+
+                    // Send back done.
+                    sayDone();
+                } else {
+                    System.err.println("Invalid command.");
+                }
+            }
+            readerMaster.close();
+            writerMaster.close();
+            masterSocket.close();
+        } catch (IOException | InterruptedException e) {
+            e.printStackTrace();
         }
     }
 
-    private static void launchMap(String inputFile) {
+    private void sayDone() throws IOException {
+        writerMaster.write("done.\n");
+        writerMaster.newLine();
+        writerMaster.flush();
+    }
+
+    private void launchMap(String inputFile) {
         try {
             BufferedReader reader = new BufferedReader(new FileReader(inputFile));
             String line;
@@ -144,7 +141,7 @@ public class SLAVE {
         }
     }
 
-    private static void launchShuffle(String inputFile) {
+    private void launchShuffle(String inputFile) {
         try {
             BufferedReader reader = new BufferedReader(new FileReader(inputFile));
             File shuffleDirectory = new File(SHUFFLE_DIRECTORY);
@@ -177,13 +174,33 @@ public class SLAVE {
         }
     }
 
-    private static void getMachines(File machinesFile) {
+    private void processShuffleReceived(String shuffleReceived) {
+        try {
+            String key = shuffleReceived.split(", ")[0];
+            int hash = key.hashCode();
+            String hostname = machines.get(hash % machines.size());
+
+            String filename = hash + "-" + hostname + ".txt";
+            File shuffleReceivedFile = new File(SHUFFLE_RECEIVED_DIRECTORY + File.separator + filename);
+            shuffleReceivedFile.createNewFile();
+            BufferedWriter writer = new BufferedWriter(new FileWriter(shuffleReceivedFile, true));
+            writer.write(shuffleReceived);
+            writer.newLine();
+            writer.close();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void getMachines(File machinesFile) {
         try {
             BufferedReader reader = new BufferedReader(new FileReader(machinesFile));
             String line;
             int machineNumber = 0;
             while ((line = reader.readLine()) != null) {
                 machines.put(machineNumber, line);
+                if(line.equals(InetAddress.getLocalHost().getHostAddress()))
+                    machineId = machineNumber;
                 machineNumber++;
             }
             reader.close();
@@ -192,7 +209,7 @@ public class SLAVE {
         }
     }
 
-    private static void processShuffleOutput() { // TODO: Modify to use socket instead of scp
+    private void processShuffleOutput() {
         try {
             File shuffleReceivedDirectory = new File(SHUFFLE_RECEIVED_DIRECTORY);
             shuffleReceivedDirectory.mkdirs();
@@ -202,19 +219,31 @@ public class SLAVE {
             assert shuffleFiles != null;
             for (File shuffleFile : shuffleFiles) {
                 int hash = Integer.parseInt(shuffleFile.getName().split("-")[0]);
-                String ipAddress = machines.get(hash % machines.size());
-                String machineDirectory = String.format("%s@%s:%s", USERNAME, ipAddress, SHUFFLE_RECEIVED_DIRECTORY);
+                int machineNumber = hash % machines.size();
+                // String ipAddress = machines.get(hash % machines.size());
+                // String machineDirectory = String.format("%s@%s:%s", USERNAME, ipAddress, SHUFFLE_RECEIVED_DIRECTORY);
 
-                ProcessBuilder pb = new ProcessBuilder("scp", shuffleFile.getAbsolutePath(), machineDirectory);
-                Process p = pb.start();
-                p.waitFor();
+                if (machineNumber == machineId) {
+                    Runtime.getRuntime().exec("cp " + shuffleFile.getAbsolutePath() + " " + SHUFFLE_RECEIVED_DIRECTORY);
+                } else {
+                    // Read the line of the file
+                    BufferedReader reader = new BufferedReader(new FileReader(shuffleFile));
+                    String line = reader.readLine();
+                    reader.close();
+
+                    writerMaster.write("Send: " + machineNumber);
+                    writerMaster.newLine();
+                    writerMaster.write(line);
+                    writerMaster.newLine();
+                    writerMaster.flush();
+                }
             }
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    private static void launchReduce() {
+    private void launchReduce() {
         try {
             File reduceDirectory = new File(REDUCE_DIRECTORY);
             reduceDirectory.mkdirs();
